# generic-repo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_RELEASE_NOTES_2.0.0.md  LICENSE  MANIFEST.in  README.md  __init__.py  generic_repo.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml
docs/: CONDITIONAL_UPDATES_QUICK_REFERENCE.md
examples/: basic_usage.py
scripts/: publish_pypi.sh  setup-dev.sh  test_delete_all_by_primary_key.py
src/: __init__.py  async_repo.py  filter_helper.py  sync_repo.py
src/generic_repo/: __init__.py  async_repo.py  filter_helper.py  sync_repo.py
tests/: README_TESTING.md  __init__.py  test_conditional_updates.py  test_generic_repo.py  test_staging_conditional_updates.py
